--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ p {
         <h3>Datasource 2</h3>
     </div>
     <div class="sources--markdown">
-        <img src=https://raw.githubusercontent.com/poissonpwn/poissonpwn.github.io/master/images/database.jpg" width="100" height="">
+        <img src="https://raw.githubusercontent.com/poissonpwn/poissonpwn.github.io/master/images/database.jpg" width="100" height="">
         <h3>Datasource 3</h3>
     </div>
   </div>
