--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSS Layout & SVG Practice</title>
+  <title>PoissonPwn</title>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=1024">
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
